--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -91,3 +91,17 @@ button:active {
 .product-item h3 {
   margin: 0 0 1rem 0;
 }
+.order-now-button {
+  position: relative; /* Set the button to relative positioning */
+}
+
+.badge {
+  position: absolute;
+  top: -10px; /* Adjust the value to control the vertical position */
+  right: -20px;
+  background-color: red;
+  color: white; 
+  padding: 2px 6px; 
+  border-radius: 10px;
+  font-size: 14px;
+}
