--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -29,9 +29,9 @@ header h1 {
 }
 
 button {
-  background: #540075;
+  background: green;
   color: white;
-  border: 1px solid #540075;
+  border: 1px solid green;
   border-radius: 5px;
   padding: 0.5rem 2rem;
   font: inherit;
@@ -44,13 +44,13 @@ button:focus {
 
 button:hover,
 button:active {
-  background: #790fa3;
-  border-color: #790fa3;
+  background: green;
+  border-color: green;
 }
 
 .cart {
   margin: 5rem 2rem;
-  border: 2px solid #540075;
+  border: 2px solid green;
   border-radius: 10px;
   padding: 2rem;
   display: flex;
@@ -60,26 +60,32 @@ button:active {
 .cart h2 {
   margin: 0;
   font-size: 1.5rem;
-  color: #540075;
+  color:green;
 }
 
 .product-list {
   list-style: none;
-  margin: 0 2rem;
+  margin: 0;
   padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  
 }
 
 .product-item {
-  margin: 2rem auto;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
-  width: 50rem;
-  max-width: 90%;
+  margin: 2rem;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
+  width: calc(25% - 4rem); 
+  max-width: 300px;
+  border-radius: 20px;
 }
 
 .product-item img {
   width: 100%;
-  height: 20rem;
-  object-fit: cover;
+  height: 17rem;
+  object-fit: fill;
+  border-radius: 20px;
 }
 
 .product-item__content {
@@ -91,17 +97,129 @@ button:active {
 .product-item h3 {
   margin: 0 0 1rem 0;
 }
+
 .order-now-button {
-  position: relative; /* Set the button to relative positioning */
+  position: relative;
 }
 
 .badge {
   position: absolute;
-  top: -10px; /* Adjust the value to control the vertical position */
+  top: -10px;
   right: -20px;
   background-color: red;
-  color: white; 
-  padding: 2px 6px; 
+  color: white;
+  padding: 2px 6px;
   border-radius: 10px;
   font-size: 14px;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1;
+}
+
+.modal-content {
+  background-color: #fff;
+  margin: 10% auto;
+  padding: 20px;
+  width: 60%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.close {
+  float: right;
+  font-size: 30px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover {
+  color: #f00;
+}
+
+.description-container {
+  max-height: 3rem; 
+  overflow: hidden;
+}
+
+.description {
+  margin: 0;
+  padding: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; 
+}
+
+.title-container {
+  max-height: 3rem; 
+  overflow: hidden;
+}
+
+.title {
+  margin: 0;
+  padding: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.product-popup {
+  min-width: 300px; 
+  max-width: 80%;  
+  padding: 20px;   
+  background-color: white; 
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); 
+  position: fixed; 
+  top: 50%; 
+  left: 50%; 
+  transform: translate(-50%, -50%); 
+  overflow-y: auto; 
+height:80vh;
+}
+
+
+
+.product-popup .popup-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.product-popup .popup-content img {
+  max-width: 50%;
+  height: auto;
+}
+
+.product-popup .popup-content .product-item__content {
+  max-width: 50%;
+}
+.product-popup .title {
+  overflow: auto;
+  height: auto; 
+  margin-bottom: 10px;
+  white-space: normal;
+  max-width: 80%; 
+}
+
+.product-popup .description {
+  overflow: auto;
+  max-height: 200px; 
+  margin-bottom: 10px; 
+  white-space: normal;
+}
+#myForm{
+  display:flex;
+  flex-direction: column;
+  width:40%;
+
+}
+#myForm input{
+  margin:0.3rem
 }
